Fix Category index padding

--- a/styles/site.scss
+++ b/styles/site.scss
@@ -153,6 +153,7 @@ img {
   overflow: scroll;
   overflow-x: hidden;
   height: 100%;
+  padding: 1em;
 }
 
 /*------------------------------------*\
