--- a/_layouts/category-index.html
+++ b/_layouts/category-index.html
@@ -4,14 +4,16 @@ layout: default
 {% if page.banner_image %}
   <div class="banner-image">
     <img 
-      src="{{ "/images/" | append: page.banner_image | prepend: site.baseurl | prepend: site.url }}" 
-      alt="{{ page.banner_image_alt }}">
+    src="{{ "/images/" | append: page.banner_image | prepend: site.baseurl | prepend: site.url }}" 
+    alt="{{ page.banner_image_alt }}">
   </div>
 {% endif %}
 
-<h1>{{ page.title }}</h1>
-<ul>
-  {% for category in site.categories %}
-    <li><a href="/{{ category | first }}/">{{ category | first | capitalize }}</a></li>
-  {% endfor %}
-</ul>
+<div class="post">
+  <h1>{{ page.title }}</h1>
+  <ul>
+    {% for category in site.categories %}
+      <li><a href="/{{ category | first }}/">{{ category | first | capitalize }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
