--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -10,7 +10,7 @@ layout: default
 {% endif %}
 
 <h1>{{ page.title }}</h1>
-<div class="posts">
+<div class="post">
 
   {% for post in site.categories.[page.category] %}
     {% capture currentyear %}{{post.date | date: "%Y"}}{% endcapture %}
