--- a/styles/helpers/_variables.scss
+++ b/styles/helpers/_variables.scss
@@ -58,7 +58,7 @@ $main-bg-color: $gray-dark;
 /* 
  * Text color
  */
-$main-fg-color: #ccc;
+$main-fg-color: #fff;
 $link-fg-color: gold;
 $sidebar-active-font-color: #000;
 
