--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -5,62 +5,42 @@
 /*
  * Header
  *
- * header used to keep the logo, site name and short description.
+ * header used to keep the hamburger and site or page name.
  */
 
-header {
-  background: darken($main-bg-color, 5%);
-  border-bottom: 1px solid $gray-lighter;
-  border-right: 2px solid $color-1;
-  width: 100%;
-  padding: 1em 0;
-  height: 75px;
-  
-  /* 
-   * Special media query hack for small tablet screen.
-   * Due to overlap of menu toggle and the logo.
-   */
-  .container {
-    margin-left: 1rem;
-    width: 75%;
-  }
+header.app-header {
+  display: flex;
+  justify-content: center;
+  background: darken($main-bg-color, 25%);
 }
 
-header .header-logo {
-  min-height: 44px;
-  min-width: 57px;  
-  padding-right: 10px;
-  text-align: left;
+// Icon Flex Items
+header.app-header > a {
+  flex: 0 0 24px;
+  font-size: 20px;
+  color: $main-fg-color;
+  padding: 1rem;
+  align-self: center;
 }
 
-header .header-logo img {
-  text-align: left;
-  margin: 0 auto; 
+header.app-header > section.material-design-hamburger {
+  flex: 0 0 24px;
+  color: $main-fg-color;
+  padding: .5rem;
+  align-self: center;
 }
 
-header .header-logo a {
-  &:hover, &:focus {
-    border-bottom-color: transparent;
-  }
+header.app-header > a:hover {
+  background-color: $color-1;
+  color: $main-bg-color;
 }
 
-header .header-logo, header .header-title {
-  float: none;
-  width: auto;
-  display: table-cell;
-  vertical-align: middle;
-}
-
-header .header-title h3 { 
-  margin-bottom: 5px; 
-  margin-top: 0;
-  small {
-    padding-left: 10px;
-  }
-}
-
-header .header-title {
-  @include MQ(iphone) {
-    visibility: hidden;
-  }
+.header-title {
+  flex: 1 1 auto;
+  font-size: 24px;
+  align-self: center;
+  padding-left: 5px;   
+  a {
+    color: $main-fg-color;
+  } 
 }
